# naf_workshop_cli_tool

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yaml
agenda/: index.html
cli_app/: index.html
docs/: agenda.md  cli_app.md  faq.md  index.md  lab_network_api.md  lab_poetry.md  lab_pydantic.md  lab_rich.md  napalm_mock.md  nornir.md  pipx.md  poetry.md  publish_package.md  pydantic.md  pydantic_plus.md  rich.md  rich_svg.md  testing_typer.md  typer.md  use_case.md
lab_network_api/: index.html
lab_poetry/: index.html
lab_pydantic/: index.html
lab_rich/: index.html
napalm_mock/: index.html
nornir/: index.html
pipx/: index.html
poetry/: index.html
publish_package/: index.html
pydantic/: index.html
pydantic_plus/: index.html
rich/: index.html
rich_svg/: index.html
testing_typer/: index.html
typer/: index.html
use_case/: index.html
